added sample human 3d

--- a/src/app/furniture/furniture.component.html
+++ b/src/app/furniture/furniture.component.html
@@ -40,7 +40,7 @@
             <div class="card-header" role="tab" id="headingTwo">
               <h5 class="mb-0">
 		        <a class="collapsed" data-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">
-		          Table Top
+		          Top
 		        </a>
 		      </h5>
             </div>
