--- a/src/app/layout/basiclayout/basiclayout.component.html
+++ b/src/app/layout/basiclayout/basiclayout.component.html
@@ -11,6 +11,9 @@
       <li class="nav-item" [ngClass]="{active: activeRoute('cars')}">
         <a class="nav-link" [routerLink]="['/cars']">Cars</a>
       </li>
+       <li class="nav-item" [ngClass]="{active: activeRoute('furniture2')}">
+        <a class="nav-link" [routerLink]="['/furniture2']">Furniture2 <span class="sr-only">(current)</span></a>
+      </li>
     </ul>
   </div>
 </nav>
