--- a/src/app/furniture/furniture.component.html
+++ b/src/app/furniture/furniture.component.html
@@ -4,7 +4,7 @@
       <div class="ml-5">
         <div class="form-group">
           <div class="col-md-12 mb-3">
-            <select class="form-control" id="inputGroupSelect01"  [(ngModel)]="appModels" (change)="selectModel()">
+            <select class="form-control" id="inputGroupSelect01" [(ngModel)]="appModels" (change)="selectModel()">
               <option selected value="">Select Model</option>
               <option value="chair">Chair</option>
               <option value="officechair">Office Chair</option>
@@ -16,10 +16,10 @@
           <div class="card">
             <div class="card-header" role="tab" id="headingOne">
               <h5 class="mb-0">
-		        <a data-toggle="collapse" href="#collapseOne" role="button" aria-expanded="true" aria-controls="collapseOne">
-		          Sizes
-		        </a>
-		      </h5>
+            <a data-toggle="collapse" href="#collapseOne" role="button" aria-expanded="true" aria-controls="collapseOne">
+              Sizes
+            </a>
+          </h5>
             </div>
             <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body">
@@ -39,34 +39,43 @@
           <div class="card">
             <div class="card-header" role="tab" id="headingTwo">
               <h5 class="mb-0">
-		        <a class="collapsed" data-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">
-		          Top
-		        </a>
-		      </h5>
+            <a class="collapsed" data-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">
+              Top
+            </a>
+          </h5>
             </div>
             <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
               <div class="card-body">
-                <div class="form-group">
-                  <div class="col-md-12 mb-3">
-                    <select class="form-control" id="inputGroupSelect01">
-                      <option selected>Choose...</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
-                    </select>
+                <div class="row">
+                  <div class="card ml-2">
+                    <img src="./assets/img/table/top/1.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                  </div>
+                  <div class="card ml-2">
+                    <img src="./assets/img/table/top/2.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                  </div>
+                  <div class="card ml-2">
+                    <img src="./assets/img/table/top/3.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                  </div>
+                  <div class="card ml-2">
+                    <img src="./assets/img/table/top/4.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                  </div>
+                  <div class="card ml-2">
+                    <img src="./assets/img/table/top/5.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
                   </div>
                 </div>
-                <div class="form-group">
-                  <button type="button" class="btn btn-primary">Primary</button>
-                  <button type="button" class="btn btn-secondary">Secondary</button>
-                  <button type="button" class="btn btn-success">Success</button>
-                  <button type="button" class="btn btn-danger">Danger</button>
-                </div>
-                <div class="form-group">
-                  <button type="button" class="btn btn-warning">Warning</button>
-                  <button type="button" class="btn btn-info">Info</button>
-                  <button type="button" class="btn btn-light">Light</button>
-                  <button type="button" class="btn btn-dark">Dark</button>
+                <div class="row mt-2">
+                  <div class="card ml-2">
+                    <img src="./assets/img/table/top/6.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                  </div>
+                  <div class="card ml-2">
+                    <img src="./assets/img/table/top/7.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                  </div>
+                  <div class="card ml-2">
+                    <img src="./assets/img/table/top/8.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                  </div>
+                  <div class="card ml-2">
+                    <img src="./assets/img/table/top/9.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                  </div>
                 </div>
               </div>
             </div>
@@ -74,34 +83,40 @@
           <div class="card">
             <div class="card-header" role="tab" id="headingThree">
               <h5 class="mb-0">
-		        <a class="collapsed" data-toggle="collapse" href="#collapseThree" role="button" aria-expanded="false" aria-controls="collapseThree">
-		          Legs and Rails
-		        </a>
-		      </h5>
+            <a class="collapsed" data-toggle="collapse" href="#collapseThree" role="button" aria-expanded="false" aria-controls="collapseThree">
+              Legs and Rails
+            </a>
+          </h5>
             </div>
             <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
               <div class="card-body">
-                <div class="form-group">
-                  <div class="col-md-12 mb-3">
-                    <select class="form-control" id="inputGroupSelect01">
-                      <option selected>Choose...</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
-                    </select>
+                <div class="row">
+                  <div class="card ml-2">
+                    <img src="./assets/img/table/1.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                  </div>
+                  <div class="card ml-2">
+                    <img src="./assets/img/table/2.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                  </div>
+                  <div class="card ml-2">
+                    <img src="./assets/img/table/3.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                  </div>
+                  <div class="card ml-2">
+                    <img src="./assets/img/table/4.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                  </div>
+                  <div class="card ml-2">
+                    <img src="./assets/img/table/5.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
                   </div>
                 </div>
-                <div class="form-group">
-                  <button type="button" class="btn btn-primary">Primary</button>
-                  <button type="button" class="btn btn-secondary">Secondary</button>
-                  <button type="button" class="btn btn-success">Success</button>
-                  <button type="button" class="btn btn-danger">Danger</button>
-                </div>
-                <div class="form-group">
-                  <button type="button" class="btn btn-warning">Warning</button>
-                  <button type="button" class="btn btn-info">Info</button>
-                  <button type="button" class="btn btn-light">Light</button>
-                  <button type="button" class="btn btn-dark">Dark</button>
+                <div class="row mt-2">
+                  <div class="card ml-2">
+                    <img src="./assets/img/table/6.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                  </div>
+                  <div class="card ml-2">
+                    <img src="./assets/img/table/7.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                  </div>
+                  <div class="card ml-2">
+                    <img src="./assets/img/table/8.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                  </div>
                 </div>
               </div>
             </div>
