added sample texturing but fail

--- a/src/app/furniture/furniture.component.html
+++ b/src/app/furniture/furniture.component.html
@@ -48,33 +48,33 @@
               <div class="card-body">
                 <div class="row">
                   <div class="card ml-2">
-                    <img src="./assets/img/table/top/1.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                    <img src="./assets/img/table/top/1.jpg" alt="Card image cap" style="width: 45px;height: 45px;" (click)="setTextureTop('1');">
                   </div>
                   <div class="card ml-2">
-                    <img src="./assets/img/table/top/2.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                    <img src="./assets/img/table/top/2.jpg" alt="Card image cap" style="width: 45px;height: 45px;" (click)="setTextureTop('2');">
                   </div>
                   <div class="card ml-2">
-                    <img src="./assets/img/table/top/3.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                    <img src="./assets/img/table/top/3.jpg" alt="Card image cap" style="width: 45px;height: 45px;" (click)="setTextureTop('3');">
                   </div>
                   <div class="card ml-2">
-                    <img src="./assets/img/table/top/4.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                    <img src="./assets/img/table/top/4.jpg" alt="Card image cap" style="width: 45px;height: 45px;" (click)="setTextureTop('4');">
                   </div>
                   <div class="card ml-2">
-                    <img src="./assets/img/table/top/5.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                    <img src="./assets/img/table/top/5.jpg" alt="Card image cap" style="width: 45px;height: 45px;" (click)="setTextureTop('5');">
                   </div>
                 </div>
                 <div class="row mt-2">
                   <div class="card ml-2">
-                    <img src="./assets/img/table/top/6.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                    <img src="./assets/img/table/top/6.jpg" alt="Card image cap" style="width: 45px;height: 45px;" (click)="setTextureTop('6');">
                   </div>
                   <div class="card ml-2">
-                    <img src="./assets/img/table/top/7.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                    <img src="./assets/img/table/top/7.jpg" alt="Card image cap" style="width: 45px;height: 45px;" (click)="setTextureTop('7');">
                   </div>
                   <div class="card ml-2">
-                    <img src="./assets/img/table/top/8.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                    <img src="./assets/img/table/top/8.jpg" alt="Card image cap" style="width: 45px;height: 45px;" (click)="setTextureTop('8');">
                   </div>
                   <div class="card ml-2">
-                    <img src="./assets/img/table/top/9.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                    <img src="./assets/img/table/top/9.jpg" alt="Card image cap" style="width: 45px;height: 45px;" (click)="setTextureTop('9');">
                   </div>
                 </div>
               </div>
@@ -92,30 +92,30 @@
               <div class="card-body">
                 <div class="row">
                   <div class="card ml-2">
-                    <img src="./assets/img/table/1.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                    <img src="./assets/img/table/1.jpg" alt="Card image cap" style="width: 45px;height: 45px;" (click)="setTextureLegs('1');">
                   </div>
                   <div class="card ml-2">
-                    <img src="./assets/img/table/2.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                    <img src="./assets/img/table/2.jpg" alt="Card image cap" style="width: 45px;height: 45px;" (click)="setTextureLegs('2');">
                   </div>
                   <div class="card ml-2">
-                    <img src="./assets/img/table/3.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                    <img src="./assets/img/table/3.jpg" alt="Card image cap" style="width: 45px;height: 45px;" (click)="setTextureLegs('3');">
                   </div>
                   <div class="card ml-2">
-                    <img src="./assets/img/table/4.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                    <img src="./assets/img/table/4.jpg" alt="Card image cap" style="width: 45px;height: 45px;" (click)="setTextureLegs('4');">
                   </div>
                   <div class="card ml-2">
-                    <img src="./assets/img/table/5.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                    <img src="./assets/img/table/5.jpg" alt="Card image cap" style="width: 45px;height: 45px;" (click)="setTextureLegs('5');">
                   </div>
                 </div>
                 <div class="row mt-2">
                   <div class="card ml-2">
-                    <img src="./assets/img/table/6.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                    <img src="./assets/img/table/6.jpg" alt="Card image cap" style="width: 45px;height: 45px;" (click)="setTextureLegs('6');">
                   </div>
                   <div class="card ml-2">
-                    <img src="./assets/img/table/7.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                    <img src="./assets/img/table/7.jpg" alt="Card image cap" style="width: 45px;height: 45px;" (click)="setTextureLegs('7');">
                   </div>
                   <div class="card ml-2">
-                    <img src="./assets/img/table/8.jpg" alt="Card image cap" style="width: 45px;height: 45px;">
+                    <img src="./assets/img/table/8.jpg" alt="Card image cap" style="width: 45px;height: 45px;" (click)="setTextureLegs('8');">
                   </div>
                 </div>
               </div>
