added fbx sample page

--- a/src/app/layout/basiclayout/basiclayout.component.html
+++ b/src/app/layout/basiclayout/basiclayout.component.html
@@ -11,8 +11,11 @@
       <li class="nav-item" [ngClass]="{active: activeRoute('cars')}">
         <a class="nav-link" [routerLink]="['/cars']">Cars</a>
       </li>
-       <li class="nav-item" [ngClass]="{active: activeRoute('furniture2')}">
+      <li class="nav-item" [ngClass]="{active: activeRoute('furniture2')}">
         <a class="nav-link" [routerLink]="['/furniture2']">Furniture2 <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item" [ngClass]="{active: activeRoute('fbxsample')}">
+        <a class="nav-link" [routerLink]="['/fbxsample']">FBX Sample <span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
