--- a/src/app/furniture/furniture.component.html
+++ b/src/app/furniture/furniture.component.html
@@ -9,6 +9,7 @@
             <option value="officechair">Office Chair</option>
             <option value="bed">Bed</option>
             <option value="table">Table</option>
+            <option value="sofa">Sofa</option>
           </select>
         </div>
       </div>
