--- a/src/app/layout/basiclayout/basiclayout.component.html
+++ b/src/app/layout/basiclayout/basiclayout.component.html
@@ -12,10 +12,10 @@
         <a class="nav-link" [routerLink]="['/cars']">Cars</a>
       </li>
       <li class="nav-item" [ngClass]="{active: activeRoute('furniture2')}">
-        <a class="nav-link" [routerLink]="['/furniture2']">Furniture2 <span class="sr-only">(current)</span></a>
+        <a class="nav-link" [routerLink]="['/furniture2']">Avatar <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item" [ngClass]="{active: activeRoute('fbxsample')}">
-        <a class="nav-link" [routerLink]="['/fbxsample']">FBX Sample <span class="sr-only">(current)</span></a>
+        <a class="nav-link" [routerLink]="['/fbxsample']">Creative's Models <span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
