add bed v1 model

--- a/src/app/furniture/furniture.component.html
+++ b/src/app/furniture/furniture.component.html
@@ -10,6 +10,7 @@
             <option value="bed">Bed</option>
             <option value="table">Table</option>
             <option value="sofa">Sofa</option>
+            <option value="bed_v1">bedV1</option>
           </select>
         </div>
       </div>
