added camera cinematic movement

--- a/src/app/layout/basiclayout/basiclayout.component.html
+++ b/src/app/layout/basiclayout/basiclayout.component.html
@@ -29,11 +29,17 @@
           <span class="sr-only">(current)</span>
         </a>
       </li>
-      <!-- <li class="nav-item">
-        <a class="nav-link">Interior Design
-          <span class="sr-only">(current)</span>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+          House Plan
         </a>
-      </li> -->
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item">Design 1</a>
+          <a class="dropdown-item">Design 2</a>
+          <a class="dropdown-item">Design 3</a>
+        </div>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
           aria-expanded="false">
@@ -45,6 +51,18 @@
           <a class="dropdown-item">Design 3</a>
         </div>
       </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+          Bathroom
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item">Design 1</a>
+          <a class="dropdown-item">Design 2</a>
+          <a class="dropdown-item">Design 3</a>
+        </div>
+      </li>
+
     </ul>
   </div>
 </nav>
