--- a/src/app/layout/basiclayout/basiclayout.component.html
+++ b/src/app/layout/basiclayout/basiclayout.component.html
@@ -62,7 +62,11 @@
           <a class="dropdown-item">Design 3</a>
         </div>
       </li>
-
+      <li class="nav-item" [ngClass]="{active: activeRoute('blueprint3d')}">
+        <a class="nav-link" [routerLink]="['/blueprint3d']">Blue Print 3D
+          <span class="sr-only">(current)</span>
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
