--- a/src/app/layout/basiclayout/basiclayout.component.html
+++ b/src/app/layout/basiclayout/basiclayout.component.html
@@ -67,6 +67,11 @@
           <span class="sr-only">(current)</span>
         </a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link">Camera Cinematic
+          <span class="sr-only">(current)</span>
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
