--- a/src/app/layout/basiclayout/basiclayout.component.html
+++ b/src/app/layout/basiclayout/basiclayout.component.html
@@ -67,8 +67,8 @@
           <span class="sr-only">(current)</span>
         </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link">Camera Cinematic
+      <li class="nav-item" [ngClass]="{active: activeRoute('camera')}">
+        <a class="nav-link" [routerLink]="['/camera']">Camera Cinematic
           <span class="sr-only">(current)</span>
         </a>
       </li>
